# programming-books-summarizer

./: README.md  pyproject.toml
backend/: .env  README.md  config.py  main.py  pyproject.toml
backend/auth/: router.py  service.py
backend/database/: book_summarizer.db  session.py
backend/users/: models.py  router.py  schemas.py  service.py
configuration/: config.py  prog_books_app_settings.properties
controller/: summarizer.py
services/users/: users_main.py
services/users/controllers/: admin.py
services/users/models/data/: users.py  usersdb.py
services/users/models/request/: library.py  users.py
services/users/repository/: login.py  signup.py  users.py
services/users/services/: login.py  signup.py  users.py
src/: database.py  main.py  models.py  router.py  schemas.py  sql_app.db
