[tool.poetry]
name = "prog_books_summarizer"
version = "0.1.0"
description = ""
authors = ["Aleksei Mikhalev <mikhalev.aleksei1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
httpx = "^0.23.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
